# GalagaRemake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: Background.hpp  Bullet.hpp  DeadEnemy.hpp  DeadEntity.hpp  DoubleLinkedList.hpp  DoubleLinkedList.tpp  Enemy.hpp  EnemyManager.hpp  Entity.hpp  Game.hpp  GameConstants.hpp  InsectEnemy.hpp  Player.hpp  ResourceManager.hpp  Row.hpp  Stage.hpp  StageManager.hpp  Wave.hpp
src/: Background.cpp  Bullet.cpp  DeadEnemy.cpp  DeadEntity.cpp  DoubleLinkedList.cpp  Enemy.cpp  Entity.cpp  Game.cpp  InsectEnemy.cpp  Player.cpp  ResourceManager.cpp  Row.cpp  Stage.cpp  StageManager.cpp  Wave.cpp  main.cpp
