cmake_minimum_required(VERSION 3.10)
project(game)
set(CMAKE_CXX_STANDARD 17)
find_package(SFML 2.5 COMPONENTS system window graphics REQUIRED)
add_executable(game src/main.cpp src/Game.cpp src/ResourceManager.cpp src/Player.cpp)
target_include_directories(game PRIVATE headers)
target_link_libraries(game PRIVATE sfml-system sfml-window sfml-graphics)